crates/ars-components/src/overlay/dialog/snapshots/ars_components__overlay__dialog__tests__dialog_title_clamped_above_six.snap
---
source: crates/ars-components/src/overlay/dialog/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).title_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-heading-level",
            ),
            String(
                "6",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "title",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "dialog",
            ),
        ),
        (
            Id,
            String(
                "dialog-title",
            ),
        ),
    ],
    styles: [],
}
